--- a/css.css
+++ b/css.css
@@ -15,7 +15,8 @@ body {
 }
 
 .wrapper {
-	width: 440px;
-	background-color: #fff;
-	box-shadow: 0 0 10px #000;
+	display: flex;
+	flex-direction: column;
+	width: 1000px;
+	height: 800px;
 }
