--- a/css.css
+++ b/css.css
@@ -68,8 +68,9 @@ body {
 .question-area .answer {
 	margin-top: 30px;
 }
-.question-area .answer span {
+.question-area .answer {
 	font-weight: bold;
+	font-size: 25px;
 }
 
 .question-area .error {
